--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loopstudios-landing-page",
-  "homepage": "https://mikeyonyedika.github.io/loopstudios-landing-page/",
+  "homepage": "http://mikeyonyedika.github.io/loopstudios-landing-page/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
